t - Add detect secrets to repo

--- a/wagtail_site/docker-compose.yml
+++ b/wagtail_site/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   db:
     image: public.ecr.aws/docker/library/postgres:16
     environment:
-      POSTGRES_PASSWORD: development
+      POSTGRES_PASSWORD: development  # pragma: allowlist secret
       POSTGRES_DB: development
     volumes:
       - postgres_data:/var/lib/postgresql/data/
