--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Run tests
       run: |
         cd wagtail_site
+        poetry run python manage.py collectstatic --noinput
         poetry run pytest
 
     - name: Restore cached python dependencies
