--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
         poetry run pytest
         poetry run python manage.py check --deploy --settings wagtail_site.settings.production --fail-level INFO
       env:
-        DJANGO_SECRET: $${{ secrets.DJANGO_SECRET }}
+        DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
 
     - name: Restore cached python dependencies
       uses: actions/cache/save@v4
