--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,10 +30,8 @@ jobs:
       run: |
         cd wagtail_site
         poetry run python manage.py collectstatic --noinput
-        poetry run pytest
+        DJANGO_SECRET=${{ secrets.DJANGO_SECRET }} poetry run pytest
         poetry run python manage.py check --deploy --settings wagtail_site.settings.production --fail-level INFO
-      env:
-        DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
 
   pre-commit:
     runs-on: ubuntu-latest
