--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,9 @@ jobs:
     - name: Run tests
       run: |
         cd wagtail_site
+        export DJANGO_SECRET=${{ secrets.DJANGO_SECRET }}
         poetry run python manage.py collectstatic --noinput
-        DJANGO_SECRET=${{ secrets.DJANGO_SECRET }} poetry run pytest
+        poetry run pytest
         poetry run python manage.py check --deploy --settings wagtail_site.settings.production --fail-level INFO
 
   pre-commit:
