--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,5 +39,6 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v5
       with:
+        python-version: "3.12"
         cache: 'pip'
     - uses: pre-commit/action@v3.0.1
