--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
         poetry run pytest
         poetry run python manage.py check --deploy --settings wagtail_site.settings.production --fail-level INFO
       env:
-        DJANGO_SECRET: ${{ vars.DJANGO_SECRET }}
+        DJANGO_SECRET: some-long-value-used-only-in-CI-to-confirm-other-settings-are-valid  # pragma: allowlist secret
 
   pre-commit:
     runs-on: ubuntu-latest
