--- a/wagtail_site/template.env
+++ b/wagtail_site/template.env
@@ -4,3 +4,6 @@
 # >>> get_random_secret_key()
 DJANGO_SECRET=
 
+# Specifies the domain name at which this site will be hosted
+# as a comma delimited list
+ALLOWED_HOSTS=
