F - Remove assumed settings module

--- a/wagtail_site/template.env
+++ b/wagtail_site/template.env
@@ -7,3 +7,6 @@ DJANGO_SECRET=
 # Specifies the domain name at which this site will be hosted
 # as a comma delimited list
 ALLOWED_HOSTS=
+
+# The settings module to use. Set to `wagtail_site.settings.production` in prod.
+DJANGO_SETTINGS_MODULE=wagtail_site.settings.dev
