--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,3 +40,10 @@ repos:
     rev: v1.5.0
     hooks:
     -   id: detect-secrets
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: '1.7.1'
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+        args: ["--no-update"]
