B - Fix paths to the poetry files, permit py 3.11

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,5 +45,6 @@ repos:
     rev: '1.7.1'
     hooks:
       - id: poetry-check
+        args: ["-C", "wagtail_site/"]
       - id: poetry-lock
-        args: ["--no-update"]
+        args: ["--no-update", "-C", "wagtail_site/"]
