--- a/wagtail_site/pyproject.toml
+++ b/wagtail_site/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.11"
 wagtail = "^6.1"
 python-decouple = "^3.8"
 gunicorn = "^22.0.0"
+whitenoise = "^6.6.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.4"
