--- a/wagtail_site/template.env
+++ b/wagtail_site/template.env
@@ -10,3 +10,12 @@ ALLOWED_HOSTS=
 
 # The settings module to use. Set to `wagtail_site.settings.production` in prod.
 DJANGO_SETTINGS_MODULE=wagtail_site.settings.dev
+
+# DB settings
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
+# Set to `verified` for prod or `allowed` for local development
+DB_SSL_MODE=
